# video-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
xcode/Debug/: video-app
xcode/lib/FFmpeg/: cmake_install.cmake
xcode/lib/FFmpeg/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/lib/FFmpeg/FFmpeg.xcodeproj/: project.pbxproj
xcode/lib/glfw/: cmake_install.cmake  cmake_uninstall.cmake
xcode/lib/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  uninstall_cmakeRulesBuildPhase.makeMinSizeRel
xcode/lib/glfw/GLFW.xcodeproj/: project.pbxproj
xcode/lib/glfw/src/: cmake_install.cmake
xcode/video-app.build/Debug/ZERO_CHECK.build/: Script-C8F066EC41794B5699A4E629.sh  dgph  dgph~
xcode/video-app.build/Debug/video-app.build/: dgph  dgph~
xcode/video-app.xcodeproj/: project.pbxproj
xcode/video-app.xcodeproj/project.xcworkspace/xcuserdata/shanikawijerathna.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/video-app.xcodeproj/xcshareddata/xcschemes/: ZERO_CHECK.xcscheme  video-app.xcscheme
xcode/video-app.xcodeproj/xcuserdata/shanikawijerathna.xcuserdatad/xcschemes/: xcschememanagement.plist
(+21 files in other folders)
